Handle first-letter at the end of bidi adjustment in legacy layout

At the end of bidi adjustment, it maps (box, offset) pair back to a DOM
position but doesn't shift the offset for first-letter, causing, e.g.,
a shifted selection when creating a range selection.

This patch fixes that.

Bug: 918349
Change-Id: I71dde2dfece3fd110e3e4c3e6580b3144a3195a8
Reviewed-on: https://chromium-review.googlesource.com/c/1394163
Commit-Queue: Emil A Eklund <eae@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619699}
Former-commit-id: a189def6b96b4a827db0365813144ee79f6a4215